tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-3.yn.stderr
error: `~const` is not allowed here
  --> $DIR/super-traits-fail-3.rs:14:12
   |
LL | trait Bar: ~const Foo {}
   |            ^^^^^^
   |
note: this trait is not a `#[const_trait]`, so it cannot have `~const` trait bounds
  --> $DIR/super-traits-fail-3.rs:14:1
   |
LL | trait Bar: ~const Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:22:24
   |
LL | const fn foo<T: ~const Bar>(x: &T) {
   |                        ^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:22:24
   |
LL | const fn foo<T: ~const Bar>(x: &T) {
   |                        ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `T: ~const Foo` is not satisfied
  --> $DIR/super-traits-fail-3.rs:25:5
   |
LL |     x.a();
   |     ^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
